--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -13,6 +13,8 @@
             <meta-data android:name="android.app.arguments" android:value="-- %%INSERT_APP_ARGUMENTS%% --"/>
             <meta-data android:name="android.app.extract_android_style" android:value="minimal"/>
         </activity>
+        <activity android:name="android.src.Klingelball.AndroidSettings">
+        </activity>
         <provider android:name="androidx.core.content.FileProvider" android:authorities="${applicationId}.qtprovider" android:exported="false" android:grantUriPermissions="true">
             <meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/qtprovider_paths"/>
         </provider>
@@ -32,4 +34,7 @@
 
 <uses-permission android:name="android.permission.ACCESS_CHECKIN_PROPERTIES"/>
 <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
+
+
 </manifest>
